# aries-kms-1

./: README.md
libarieswallet/: Cargo.toml
libarieswallet/include/: aries.h  wallet.h
libarieswallet/src/: lib.rs
libarieswallet/src/ffi/: error.rs  mod.rs  wallet.rs
libarieswallet/src/wallet/: key.rs  mod.rs
