[package]
name = "libarieswallet"
version = "0.1.0"
authors = ["The Hyperledger Aries Contributors"]
edition = "2018"

[dependencies]
futures = "0.1.28"
ffi-support = "0.3.5"
failure = "0.1.5"
rmp-serde = "0.13.7"
rust_sodium = "0.10.1"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"


